# IEC-104-Library

./: .gitignore  .pre-commit-config.yaml  API_OVERVIEW.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api.rst  beispiele.rst  conf.py  entwicklerleitfaden.rst  index.rst  konzept.rst  sicherheit.rst
src/hypothesis/: __init__.py  core.py  strategies.py
src/iec104/: __init__.py  errors.py  logging.py  typing.py
src/iec104/apci/: control_field.py  frame.py
src/iec104/asdu/: header.py  ioa.py
src/iec104/asdu/types/: c_ica_na_1.py  c_sc_na_1.py  common.py  m_me_nc_1.py  m_sp_na_1.py  m_sp_tb_1.py
src/iec104/codec/: decode.py  encode.py
src/iec104/examples/: minimal_client.py  minimal_server.py
src/iec104/link/: session.py  tcp.py  timers.py
src/iec104/security/: policy.py
src/iec104/spec/: constants.py  time.py
src/iec104/utils/: bitops.py  buffers.py
tests/: conftest.py  test_apci_control_field.py  test_apci_frame.py  test_asdu_header.py  test_cp56time2a.py  test_general_interrogation.py  test_session_state_machine.py  test_streaming_decoder.py  test_types_roundtrip.py
tests/property/: test_cp56time_property.py  test_roundtrip_property.py  test_seq_numbers_mod32768.py
